Syncing with community PR 2041, and resyncing some pages such as k3s.adoc and use-windows-clusters.adoc with latest. Adding the dual-stack.adoc page to the Cluster Deployment section.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.13/modules/en/pages/cluster-deployment/configuration/rke2.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/configuration/rke2.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-18
+:revdate: 2025-12-10
 :page-revdate: {revdate}
 
 This section covers the configuration options that are available in Rancher for a new or existing RKE2 Kubernetes cluster.
@@ -32,7 +32,7 @@ To edit your cluster,
 
 === Editing Clusters in YAML
 
-For a complete reference of configurable options for K3s clusters in YAML, see the https://rancher.com/docs/k3s/latest/en/installation/install-options/[K3s documentation.]
+For a complete reference of configurable options for RKE2 clusters in YAML, see the https://documentation.suse.com/cloudnative/rke2/latest/en/install/configuration.html[RKE2 documentation].
 
 To edit your cluster in YAML:
 
@@ -49,7 +49,8 @@ This subsection covers generic machine pool configurations. For specific infrast
 
 * xref:cluster-deployment/infra-providers/azure/machine-configuration.adoc[Azure]
 * xref:cluster-deployment/infra-providers/digitalocean/machine-configuration.adoc[DigitalOcean]
-* xref:cluster-deployment/infra-providers/aws/machine-configuration.adoc[EC2]
+* xref:cluster-deployment/infra-providers/aws/machine-configuration.adoc[Amazon EC2]
+* xref:cluster-deployment/infra-providers/gce/machine-configuration.adoc[Google GCE]
 endif::[]
 ifeval::["{build-type}" == "srfa"]
 This subsection covers generic machine pool configurations. For specific EC2 infrastructure provider configurations, refer to the following:
@@ -98,9 +99,9 @@ Add https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/[tain
 
 ===== Kubernetes Version
 
-The version of Kubernetes installed on your cluster nodes. Rancher packages its own version of Kubernetes based on https://github.com/rancher/hyperkube[hyperkube].
+The version of Kubernetes installed on your cluster nodes.
 
-For more detail, see xref:cluster-admin/backups-and-restore/backups-and-restore.adoc[Upgrading Kubernetes].
+For details on upgrading or rolling back Kubernetes, refer to xref:cluster-admin/backups-and-restore/backups-and-restore.adoc[Upgrading Kubernetes].
 
 ===== Container Network Provider
 
@@ -118,19 +119,17 @@ Out of the box, Rancher is compatible with the following network providers:
 * https://github.com/projectcalico/canal[Canal]
 * https://cilium.io/[Cilium]*
 * https://docs.projectcalico.org/v3.11/introduction/[Calico]
+* https://github.com/flannel-io/flannel[Flannel]
 * https://github.com/k8snetworkplumbingwg/multus-cni[Multus]
 
 * When using <<_project_network_isolation,project network isolation>> in the xref:faq/container-network-interface-providers.adoc#_cilium[Cilium CNI], it is possible to enable cross-node ingress routing. Click the xref:faq/container-network-interface-providers.adoc#_ingress_routing_across_nodes_in_cilium[CNI provider docs] to learn more.
 
 For more details on the different networking providers and how to configure them, please view our https://documentation.suse.com/cloudnative/rke2/latest/en/networking/basic_network_options.html[RKE2 documentation].
 
-====== Dual-stack Networking
-
-https://documentation.suse.com/cloudnative/rke2/latest/en/networking/basic_network_options.html#_dual_stack_configuration[Dual-stack] networking is supported for all CNI providers. To configure RKE2 in dual-stack mode, set valid IPv4/IPv6 CIDRs for your <<_cluster_cidr,Cluster CIDR>> and/or <<_service_cidr,Service CIDR>>.
-
-====== Dual-stack Additional Configuration
-
+[CAUTION]
+====
 When using `cilium` or `multus,cilium` as your container network interface provider, ensure the *Enable IPv6 Support* option is also enabled.
+====
 
 ===== Cloud Provider
 
@@ -194,27 +193,49 @@ Option to choose whether to expose etcd metrics to the public or only within the
 
 ===== Cluster CIDR
 
-IPv4 and/or IPv6 network CIDRs to use for pod IPs (default: 10.42.0.0/16).
+IPv4 and/or IPv6 network CIDRs to use for pod IPs (default: `10.42.0.0/16`).
 
-====== Dual-stack Networking
+Example values:
 
-To configure https://documentation.suse.com/cloudnative/rke2/latest/en/networking/basic_network_options.html#_dual_stack_configuration[dual-stack] mode, enter a valid IPv4/IPv6 CIDR. For example `10.42.0.0/16,2001:cafe:42:0::/56`.
+* IPv4-only: `10.42.0.0/16`
+* IPv6-only: `2001:cafe:42::/56`
+* Dual-stack: `10.42.0.0/16,2001:cafe:42::/56`
 
-<<_dual_stack_additional_configuration,Additional configuration>> is required when using `cilium` or `multus,cilium` as your <_container_network_provider,container network>> interface provider.
+For additional requirements and limitations related to dual-stack or IPv6-only networking, see the following resources:
+
+* https://documentation.suse.com/cloudnative/rke2/latest/en/networking/basic_network_options.html#_dual_stack_configuration[RKE2 documentation: Dual-stack configuration]
+* https://documentation.suse.com/cloudnative/rke2/latest/en/networking/basic_network_options.html#_ipv6_setup[RKE2 documentation: IPv6-only setup]
+
+[CAUTION]
+====
+* You must configure the Service CIDR when you first create the cluster. You cannot enable the Service CIDR on an existing cluster after it starts.
+* When using `cilium` or `multus,cilium` as your container network interface provider, ensure the **Enable IPv6 Support** option is also enabled.
+====
 
 ===== Service CIDR
 
-IPv4/IPv6 network CIDRs to use for service IPs (default: 10.43.0.0/16).
+IPv4/IPv6 network CIDRs to use for service IPs (default: `10.43.0.0/16`).
 
-====== Dual-stack Networking
+Example values:
 
-To configure https://documentation.suse.com/cloudnative/rke2/latest/en/networking/basic_network_options.html#_dual_stack_configuration[dual-stack] mode, enter a valid IPv4/IPv6 CIDR. For example `10.42.0.0/16,2001:cafe:42:0::/56`.
+* IPv4-only: `10.43.0.0/16`
+* IPv6-only: `2001:cafe:43::/112`
+* Dual-stack: `10.43.0.0/16,2001:cafe:43::/112`
 
-<<_dual_stack_additional_configuration,Additional configuration>> is required when using `cilium ` or `multus,cilium` as your <_container_network_provider,container network>> interface provider.
+For additional requirements and limitations related to dual-stack or IPv6-only networking, see the following resources:
+
+* https://documentation.suse.com/cloudnative/rke2/latest/en/networking/basic_network_options.html#_dual_stack_configuration[RKE2 documentation: Dual-stack configuration]
+* https://documentation.suse.com/cloudnative/rke2/latest/en/networking/basic_network_options.html#_ipv6_setup[RKE2 documentation: IPv6-only setup]
+
+[CAUTION]
+====
+* You must configure the Service CIDR when you first create the cluster. You cannot enable the Service CIDR on an existing cluster after it starts.
+* When using `cilium` or `multus,cilium` as your container network interface provider, ensure the **Enable IPv6 Support** option is also enabled.
+====
 
 ===== Cluster DNS
 
-IPv4 Cluster IP for coredns service. Should be in your service-cidr range (default: 10.43.0.10).
+IPv4 Cluster IP for coredns service. Should be in your service-cidr range (default: `10.43.0.10`).
 
 ===== Cluster Domain
 
@@ -226,15 +247,41 @@ Option to change the range of ports that can be used for https://kubernetes.io/d
 
 ===== Truncate Hostnames
 
-Option to truncate hostnames to 15 characters or less. You can only set this field during the initial creation of the cluster. You can't enable or disable the 15 character limit after cluster creation.
+Option to truncate hostnames to 15 characters or fewer. You can only set this field during the initial creation of the cluster. You can't enable or disable the 15-character limit after cluster creation.
 
 This setting only affects machine-provisioned clusters. Since custom clusters set hostnames during their own node creation process, which occurs outside of Rancher, this field doesn't restrict custom cluster hostname length.
 
-Truncating hostnames in a cluster improves compatibility with Windows-based systems. Although Kubernetes allows hostnames up to 63 characters in length, systems that use NetBIOS restrict hostnames to 15 characters or less.
+Truncating hostnames in a cluster improves compatibility with Windows-based systems. Although Kubernetes allows hostnames up to 63 characters in length, systems that use NetBIOS restrict hostnames to 15 characters or fewer.
 
 ===== TLS Alternate Names
 
 Add hostnames or IPv4/IPv6 addresses as Subject Alternative Names on the server TLS cert.
+
+===== Stack Preference
+
+Choose the networking stack for the cluster. This option affects:
+
+* The address used for health and readiness probes of components such as Calico, etcd, kube-apiserver, kube-scheduler, kube-controller-manager, and kubelet.
+* The server URL in the `authentication-token-webhook-config-file` for the Authorized Cluster Endpoint.
+* The `advertise-client-urls` setting for etcd during snapshot restoration.
+
+Options are `ipv4`, `ipv6`, `dual`:
+
+* When set to `ipv4`, the cluster uses `127.0.0.1`
+* When set to `ipv6`, the cluster uses `[::1]`
+* When set to `dual`, the cluster uses `localhost`
+
+The stack preference must match the cluster’s networking configuration:
+
+* Set to `ipv4` for IPv4-only clusters
+* Set to `ipv6` for IPv6-only clusters
+* Set to `dual` for dual-stack clusters
+
+[CAUTION]
+====
+Ensuring the loopback address configuration is correct is critical for successful cluster provisioning.
+For more information, refer to the xref:cluster-deployment/node-requirements.adoc[Node Requirements] page.
+====
 
 ===== Authorized Cluster Endpoint
 
