--- a/versions/v2.13/modules/en/pages/cluster-deployment/custom-clusters/custom-clusters.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/custom-clusters/custom-clusters.adoc
@@ -2,13 +2,13 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-10-01
+:revdate: 2025-12-10
 :page-revdate: {revdate}
 :description: To create a cluster with custom nodes, you’ll need to access servers in your cluster and provision them according to Rancher requirements
 
 When you create a custom cluster, Rancher can use RKE2/K3s to create a Kubernetes cluster in on-prem bare-metal servers, on-prem virtual machines, or in any node hosted by an infrastructure provider.
 
-To use this option you'll need access to servers you intend to use in your Kubernetes cluster. Provision each server according to the xref:cluster-deployment/node-requirements.adoc[requirements], which includes some hardware specifications and Docker. After you install Docker on each server, you willl also run the command provided in the Rancher UI on each server to turn each one into a Kubernetes node.
+To use this option, you need access to the servers that will be part of your Kubernetes cluster. Provision each server according to thexref:cluster-deployment/node-requirements.adoc[requirements]. Then, run the command provided in the Rancher UI on each server to convert it into a Kubernetes node.
 
 This section describes how to set up a custom cluster.
 
@@ -34,7 +34,15 @@ If you want to reuse a node from a previous custom cluster, xref:cluster-admin/m
 
 Provision the host according to the xref:cluster-deployment/node-requirements.adoc[installation requirements] and the xref:cluster-deployment/production-checklist/production-checklist.adoc[checklist for production-ready clusters.]
 
-If you're using Amazon EC2 as your host and want to use the https://kubernetes.io/docs/concepts/services-networking/dual-stack/[dual-stack] feature, there are additional https://rancher.com/docs/rke//latest/en/config-options/dual-stack#requirements[requirements] when provisioning the host.
+[NOTE]
+.IPv6-only cluster
+====
+For an IPv6-only cluster, ensure that your operating system correctly configures the `/etc/hosts` file.
+
+```
+::1       localhost
+```
+====
 
 === 2. Create the Custom Cluster
 
@@ -42,56 +50,50 @@ If you're using Amazon EC2 as your host and want to use the https://kubernetes.i
 . On the *Clusters* page, click *Create*.
 . Click *Custom*.
 . Enter a *Cluster Name*.
-. Use *Cluster Configuration* section to choose the version of Kubernetes, what network provider will be used and if you want to enable project network isolation. To see more cluster options, click on *Show advanced options*.
+. Use the *Cluster Configuration* section to set up the cluster. For more information, see xref:cluster-deployment/configuration/rke2.adoc[RKE2 Cluster Configuration Reference] and xref:cluster-deployment/configuration/k3s.adoc[K3s Cluster Configuration Reference].
 +
-
 [NOTE]
-.Using Windows nodes as Kubernetes workers?
+.Windows nodes
 ====
-
- ** See xref:cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc[Enable the Windows Support Option].
- ** The only Network Provider available for clusters with Windows support is Flannel.
-
-+
+To learn more about using Windows nodes as Kubernetes workers, see xref:cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc[Launching Kubernetes on Windows Clusters].
 ====
-
 +
-
+. Click *Create*.
++
+*Result:* The UI redirects to the *Registration* page, where you can generate the registration command for your nodes.
++
+. From *Node Role*, select the roles you want a cluster node to fill. You must provision at least one node for each role: etcd, worker, and control plane. A custom cluster requires all three roles to finish provisioning. For more information on roles, see xref:about-rancher/concepts.adoc#_roles_for_nodes_in_kubernetes_clusters[Roles for Nodes in Kubernetes Clusters].
++
 [NOTE]
-.Dual-stack on Amazon EC2:
+.Bare-Metal Server
 ====
-If you're using Amazon EC2 as your host and want to use the https://kubernetes.io/docs/concepts/services-networking/dual-stack/[dual-stack] feature, there are additional https://rancher.com/docs/rke//latest/en/config-options/dual-stack#requirements[requirements] when configuring RKE.
+If you plan to dedicate bare-metal servers to each role, you must provision a bare-metal server for each role (i.e., provision multiple bare-metal servers).
 ====
-
-
-. Click *Next*.
-. Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
-. From *Node Role*, choose the roles that you want filled by a cluster node. You must provision at least one node for each role: `etcd`, `worker`, and `control plane`. All three roles are required for a custom cluster to finish provisioning. For more information on roles, see xref:about-rancher/concepts.adoc#_roles_for_nodes_in_kubernetes_clusters[this section.]
-
++
+. *Optional:* Click *Show Advanced* to configure additional settings such as specifying the IP address(es), overriding the node hostname, or adding https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/[labels] or https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/[taints] to the node
++
 [NOTE]
 ====
-
-* Using Windows nodes as Kubernetes workers? See xref:cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc[this section].
-* Bare-Metal Server Reminder: If you plan on dedicating bare-metal servers to each role, you must provision a bare-metal server for each role (i.e. provision multiple bare-metal servers).
+* The *Node Public IP* and *Node Private IP* fields can accept either a single address or a comma-separated list of addresses (for example: `10.0.0.5,2001:db8::1`).
 ====
-
-
-. *Optional*: Click *xref:cluster-deployment/custom-clusters/rancher-agent-options.adoc[Show advanced options]* to specify IP address(es) to use when registering the node, override the hostname of the node, or to add https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/[labels] or https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/[taints] to the node.
++
+[NOTE]
+.IPv6-only or Dual-stack Cluster
+====
+* In both IPv6-only and dual-stack clusters, you should specify the node’s *IPv6 address* as the *Node Private IP*.
+====
++
 . Copy the command displayed on screen to your clipboard.
 . Log in to your Linux host using your preferred shell, such as PuTTy or a remote Terminal connection. Run the command copied to your clipboard.
 
 [NOTE]
 ====
-
 Repeat steps 7-10 if you want to dedicate specific hosts to specific node roles. Repeat the steps as many times as needed.
 ====
 
-
-. When you finish running the command(s) on your Linux host(s), click *Done*.
-
 *Result:*
 
-Your cluster is created and assigned a state of *Provisioning*. Rancher is standing up your cluster.
+The cluster is created and transitions to the *Updating* state while Rancher initializes and provisions cluster components.
 
 You can access your cluster after its state is updated to *Active*.
 
