--- a/versions/v2.13/modules/en/pages/cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc
@@ -2,34 +2,23 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2025-12-10
 :page-revdate: {revdate}
 
-When provisioning a xref:cluster-deployment/custom-clusters/custom-clusters.adoc[custom cluster] using Rancher, Rancher uses RKE (the Rancher Kubernetes Engine) to install Kubernetes on your existing nodes.
+When provisioning a xref:cluster-deployment/custom-clusters/custom-clusters.adoc[custom cluster] Rancher uses RKE2 to install Kubernetes on your existing nodes.
 
 In a Windows cluster provisioned with Rancher, the cluster must contain both Linux and Windows nodes. The Kubernetes controlplane can only run on Linux nodes, and the Windows nodes can only have the worker role. Windows nodes can only be used for deploying workloads.
 
-Some other requirements for Windows clusters include:
-
-* You can only add Windows nodes to a cluster if Windows support is enabled when the cluster is created. Windows support cannot be enabled for existing clusters.
-* Kubernetes 1.15+ is required.
-* The Flannel network provider must be used.
-* Windows nodes must have 50 GB of disk space.
-
-For the full list of requirements, see <<_requirements_for_windows_clusters,this section.>>
-
 For a summary of Kubernetes features supported in Windows, see the Kubernetes documentation on https://kubernetes.io/docs/setup/production-environment/windows/intro-windows-in-kubernetes/#supported-functionality-and-limitations[supported functionality and limitations for using Kubernetes with Windows] or the https://kubernetes.io/docs/setup/production-environment/windows/user-guide-windows-containers/[guide for scheduling Windows containers in Kubernetes].
 
-== {rke2-product-name} Windows
+== {rke2-product-name} Features for Windows Clusters
 
-The RKE2 provisioning feature also includes installing RKE2 on Windows clusters. Windows features for RKE2 include:
+Listed below are the primary RKE2 features for Windows cluster provisioning:
 
 * Windows Containers with RKE2 powered by containerd
 * Added provisioning of Windows RKE2 custom clusters directly from the Rancher UI
 * Calico and Flannel CNI for Windows RKE2 custom clusters
 * SAC releases of Windows Server (2004 and 20H2) are included in the technical preview
-
-Windows Support for RKE2 Custom Clusters requires choosing Calico as the CNI.
 
 [NOTE]
 ====
@@ -40,11 +29,11 @@ Rancher will allow Windows workload pods to deploy on both Windows and Linux wor
 
 * HostProcess containers in Windows RKE2 are supported in Kubernetes v1.24.1 and up. See https://kubernetes.io/docs/tasks/configure-pod-container/create-hostprocess-pod/[the upstream documentation] for more information.
 
-== Requirements for Windows Clusters
+== General Requirements
 
-The general node requirements for networking, operating systems, and Docker are the same as the node requirements for a xref:installation-and-upgrade/requirements/requirements.adoc[Rancher installation].
+The general networking and operating system requirements for Windows nodes are the same as for other xref:installation-and-upgrade/requirements/requirements.adoc[Rancher installations].
 
-=== OS and Docker Requirements
+=== OS Requirements
 
 Our support for Windows Server and Windows containers match the Microsoft official lifecycle for LTSC (Long-Term Servicing Channel) and SAC (Semi-Annual Channel).
 
@@ -52,9 +41,7 @@ For the support lifecycle dates for Windows Server, see the https://docs.microso
 
 === Kubernetes Version
 
-Kubernetes v1.15+ is required.
-
-If you are using Kubernetes v1.21 with Windows Server 20H2 Standard Core, the patch "2019-08 Servicing Stack Update for Windows Server" must be installed on the node.
+For more information regarding Kubernetes component versions, see the https://www.suse.com/suse-rke2/support-matrix/all-supported-versions/[support matrices for RKE2 versions].
 
 === Node Requirements
 
@@ -72,12 +59,6 @@ Before provisioning a new cluster, be sure that you have already installed Ranch
 
 Rancher supports Windows using Calico and Flannel as network providers.
 
-There are two network options: https://github.com/coreos/flannel/blob/master/Documentation/backends.md#host-gw[*Host Gateway (L2bridge)*] and https://github.com/coreos/flannel/blob/master/Documentation/backends.md#vxlan[*VXLAN (Overlay)*]. The default option is *VXLAN (Overlay)* mode.
-
-For *Host Gateway (L2bridge)* networking, it's best to use the same Layer 2 network for all nodes. Otherwise, you need to configure the route rules for them. For details, refer to the xref:./network-requirements-for-host-gateway.adoc#_cloud_hosted_vm_routes_configuration[documentation on configuring cloud-hosted VM routes.] You will also need to xref:./network-requirements-for-host-gateway.adoc#_disabling_private_ip_address_checks[disable private IP address checks] if you are using Amazon EC2, Google GCE, or Azure VM.
-
-For *VXLAN (Overlay)* networking, the https://support.microsoft.com/en-us/help/4489899[KB4489899] hotfix must be installed. Most cloud-hosted VMs already have this hotfix.
-
 If you are configuring DHCP options sets for an AWS virtual private cloud, note that in the `domain-name` option field, only one domain name can be specified. According to the DHCP options https://docs.aws.amazon.com/vpc/latest/userguide/VPC_DHCP_Options.html[documentation:]
 
 [NOTE]
@@ -91,6 +72,7 @@ Some Linux operating systems accept multiple domain names separated by spaces. H
 
 If you are using Rancher on VMware vSphere with ESXi 6.7u2 or later with Red Hat Enterprise Linux 8.3, CentOS 8.3, or SUSE Enterprise Linux 15 SP2 or later, it is necessary to disable the `vmxnet3` virtual network adapter hardware offloading feature. Failure to do so will result in all network connections between pods on different cluster nodes to fail with timeout errors. All connections from Windows pods to critical services running on Linux nodes, such as CoreDNS, will fail as well. It is also possible that external connections may fail. This issue is the result of Linux distributions enabling the hardware offloading feature in `vmxnet3` and a bug in the `vmxnet3` hardware offloading feature that results in the discarding of packets for guest overlay traffic. To address this issue, it is necessary disable the `vmxnet3` hardware offloading feature. This setting does not survive reboot, so it is necessary to disable on every boot. The recommended course of action is to create a systemd unit file at `/etc/systemd/system/disable_hw_offloading.service`, which disables the `vmxnet3` hardware offloading feature on boot. A sample systemd unit file which disables the `vmxnet3` hardware offloading feature is as follows. Note that `<VM network interface>` must be customized to the host `vmxnet3` network interface, e.g., `ens192`:
 
+[source,shell]
 ----
 [Unit]
 Description=Disable vmxnet3 hardware offloading feature
@@ -107,12 +89,14 @@ WantedBy=multi-user.target
 
 Then set the appropriate permissions on the systemd unit file:
 
+[source,shell]
 ----
 chmod 0644 /etc/systemd/system/disable_hw_offloading.service
 ----
 
 Finally, enable the systemd service:
 
+[source,shell]
 ----
 systemctl enable disable_hw_offloading.service
 ----
@@ -141,7 +125,7 @@ We recommend the minimum three-node architecture listed in the table below, but 
 | Support the Rancher Cluster agent, Metrics server, DNS, and Ingress for the cluster
 
 | Node 3
-| Windows (Windows Server core version 1809 or above)
+| Windows (Windows Server core version 1809 or above required, version 2022 recommended)
 | Worker
 | Run your Windows containers
 |===
@@ -163,8 +147,6 @@ If you are using the GCE (Google Compute Engine) cloud provider, you must do the
 
 This tutorial describes how to create a Rancher-provisioned cluster with the three nodes in the <<_recommended_architecture,recommended architecture.>>
 
-When you provision a cluster with Rancher on existing nodes, you will add nodes to the cluster by installing the xref:cluster-deployment/custom-clusters/rancher-agent-options.adoc[Rancher agent] on each one. When you create or edit your cluster from the Rancher UI, you will see a *Customize Node Run Command* that you can run on each server to add it to your cluster.
-
 To set up a cluster with support for Windows nodes and containers, you will need to complete the tasks below.
 
 === 1. Provision Hosts
@@ -179,7 +161,7 @@ Your hosts can be:
 
 You will provision three nodes:
 
-* One Linux node, which manages the Kubernetes control plane and stores your `etcd`
+* One Linux node, which manages the Kubernetes control plane, stores your `etcd`, and optionally can be a worker node
 * A second Linux node, which will be another worker node
 * The Windows node, which will run your Windows containers as a worker node
 
@@ -193,7 +175,7 @@ You will provision three nodes:
 | Linux (Ubuntu Server 18.04 recommended)
 
 | Node 3
-| Windows (Windows Server core version 1809 or above required)
+| Windows (Windows Server core version 1809 or above required, version 2022 recommended)
 |===
 
 If your nodes are hosted by a *Cloud Provider* and you want automation support such as loadbalancers or persistent storage devices, your nodes have additional configuration requirements. For details, see xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc[Selecting Cloud Providers.]
@@ -206,49 +188,33 @@ The instructions for creating a Windows cluster on existing nodes are very simil
 . On the *Clusters* page, click *Create*.
 . Click *Custom*.
 . Enter a name for your cluster in the *Cluster Name* field.
-. In the *Kubernetes Version* dropdown menu, select v1.19 or above.
-. In the *Network Provider* field, select either *Calico* or *Flannel*.
-. In the *Windows Support* section, click *Enabled*.
-. Optional: If you select Flannel and after you enable Windows support, you will be able to choose the Flannel backend. There are two network options: https://github.com/coreos/flannel/blob/master/Documentation/backends.md#host-gw[*Host Gateway (L2bridge)*] and https://github.com/coreos/flannel/blob/master/Documentation/backends.md#vxlan[*VXLAN (Overlay)*]. The default option is *VXLAN (Overlay)* mode.
-. Click *Next*.
-
-[NOTE]
-.Important:
-====
-
-For *Host Gateway (L2bridge)* networking, it's best to use the same Layer 2 network for all nodes. Otherwise, you need to configure the route rules for them. For details, refer to the xref:./network-requirements-for-host-gateway.adoc#_cloud_hosted_vm_routes_configuration[documentation on configuring cloud-hosted VM routes.] You will also need to xref:./network-requirements-for-host-gateway.adoc#_disabling_private_ip_address_checks[disable private IP address checks] if you are using Amazon EC2, Google GCE, or Azure VM.
-====
-
+. In the *Kubernetes Version* dropdown menu, select a supported Kubernetes version.
+. In the *Container Network* field, select either *Calico* or *Flannel*.
+. Click *Create*.
 
 === 3. Add Nodes to the Cluster
 
-This section describes how to register your Linux and Worker nodes to your cluster. You will run a command on each node, which will install the Rancher agent and allow Rancher to manage each node.
+This section describes how to register your Linux and Worker nodes to your cluster. You will run a command on each node, which will install the rancher-system-agent and allow Rancher to manage each node.
 
 ==== Add Linux Master Node
 
 In this section, we fill out a form on the Rancher UI to get a custom command to install the Rancher agent on the Linux master node. Then we will copy the command and run it on our Linux master node to register the node in the cluster.
 
-The first node in your cluster should be a Linux host has both the *Control Plane* and *etcd* roles. At a minimum, both of these roles must be enabled for this node, and this node must be added to your cluster before you can add Windows hosts.
+The first node in your cluster should be a Linux host that has both the *Control Plane* and *etcd* roles. At a minimum, both of these roles must be enabled for this node, and this node must be added to your cluster before you can add Windows hosts.
 
-. In the *Node Operating System* section, click *Linux*.
-. In the *Node Role* section, choose at least *etcd* and *Control Plane*. We recommend selecting all three.
-. Optional: If you click *Show advanced options,* you can customize the settings for the xref:cluster-deployment/custom-clusters/rancher-agent-options.adoc[Rancher agent] and https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/[node labels.]
-. Copy the command displayed on the screen to your clipboard.
+. After cluster creation, navigate to the *Registration* tab.
+. In *Step 1* under the *Node Role* section, select all three roles. Although you can choose only the *etcd* and *Control Plane* roles, we recommend selecting all three.
+. Optional: If you click *Show Advanced*, you can configure additional settings such as specifying the IP address(es), overriding the node hostname, or adding https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/[labels] or https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/[taints] to the node.
+. In *Step 2*, under the *Registration* section, copy the command displayed on the screen to your clipboard.
 . SSH into your Linux host and run the command that you copied to your clipboard.
-. When you are finished provisioning your Linux node(s), select *Done*.
 
 *Result:*
 
-Your cluster is created and assigned a state of *Provisioning*. Rancher is standing up your cluster.
+Your cluster is created and assigned a state of *Updating*. Rancher is standing up your cluster.
 
-You can access your cluster after its state is updated to *Active*.
+It may take a few minutes for the node to register and appear under the *Machines* tab.
 
-*Active* clusters are assigned two Projects:
-
-* `Default`, containing the `default` namespace
-* `System`, containing the `cattle-system`, `ingress-nginx`, `kube-public`, and `kube-system` namespaces
-
-It may take a few minutes for the node to be registered in your cluster.
+You’ll be able to access the cluster once its state changes to *Active*.
 
 ==== Add Linux Worker Node
 
@@ -256,15 +222,15 @@ In this section, we run a command to register the Linux worker node to the clust
 
 After the initial provisioning of your cluster, your cluster only has a single Linux host. Next, we add another Linux `worker` host, which will be used to support _Rancher cluster agent_, _Metrics server_, _DNS_ and _Ingress_ for your cluster.
 
-. In the upper left corner, click *☰ > Cluster Management*.
-. Go to the cluster that you created and click *⋮ > Edit Config*.
-. Scroll down to *Node Operating System*. Choose *Linux*.
-. In the *Customize Node Run Command* section, go to the *Node Options* and select the *Worker* role.
-. Copy the command displayed on screen to your clipboard.
-. Log in to your Linux host using a remote Terminal connection. Run the command copied to your clipboard.
-. From *Rancher*, click *Save*.
+. After cluster creation, navigate to the *Registration* tab.
+. In *Step 1* under the *Node Role* section, select *Worker*.
+. Optional: If you click *Show Advanced*, you can configure additional settings such as specifying the IP address(es), overriding the node hostname, or to add https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/[labels] or https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/[taints] to the node.
+. In *Step 2*, under the *Registration* section, copy the command displayed on the screen to your clipboard.
+. SSH into your Linux host and run the command that you copied to your clipboard.
 
-*Result:* The *Worker* role is installed on your Linux host, and the node registers with Rancher. It may take a few minutes for the node to be registered in your cluster.
+*Result:* 
+
+The *Worker* role is installed on your Linux host, and the node registers with Rancher. It may take a few minutes for the node to be registered in your cluster.
 
 [NOTE]
 ====
@@ -287,17 +253,22 @@ For each Linux worker node added into the cluster, the following taints will be 
 
 In this section, we run a command to register the Windows worker node to the cluster.
 
-You can add Windows hosts to the cluster by editing the cluster and choosing the *Windows* option.
+:::note
+The registration command to add the Windows workers only appears after the cluster is running with Linux etcd, control plane, and worker nodes.
+:::
 
-. In the upper left corner, click *☰ > Cluster Management*.
-. Go to the cluster that you created and click *⋮ > Edit Config*.
-. Scroll down to *Node Operating System*. Choose *Windows*. Note: You will see that the *worker* role is the only available role.
-. Copy the command displayed on screen to your clipboard.
-. Log in to your Windows host using your preferred tool, such as https://docs.microsoft.com/en-us/windows-server/remote/remote-desktop-services/clients/remote-desktop-clients[Microsoft Remote Desktop]. Run the command copied to your clipboard in the *Command Prompt (CMD)*.
-. From Rancher, click *Save*.
+. After cluster creation, navigate to the *Registration* tab.
+. In *Step 1* under the *Node Role* section, select *Worker*.
+. Optional: If you click *Show Advanced*, you can configure additional settings such as specifying the IP address(es), overriding the node hostname, or adding https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/[labels] or https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/[taints] to the node.
+. In *Step 2*, under the *Registration* section, copy the command for Windows workers displayed on the screen to your clipboard.
+. Log in to your Windows host using your preferred tool, such as https://docs.microsoft.com/en-us/windows-server/remote/remote-desktop-services/clients/remote-desktop-clients[Microsoft Remote Desktop]. Run the command copied to your clipboard in the *PowerShell Console* as an Administrator.
 . Optional: Repeat these instructions if you want to add more Windows nodes to your cluster.
 
-*Result:* The *Worker* role is installed on your Windows host, and the node registers with Rancher. It may take a few minutes for the node to be registered in your cluster. You now have a Windows Kubernetes cluster.
+*Result:* 
+
+The *Worker* role is installed on your Windows host, and the node registers with Rancher. It may take a few minutes for the node to be registered in your cluster. 
+
+You now have a Windows Kubernetes cluster.
 
 === Optional Next Steps
 
