--- a/versions/v2.13/modules/en/pages/cluster-deployment/infra-providers/aws/machine-configuration.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/infra-providers/aws/machine-configuration.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2025-12-10
 :page-revdate: {revdate}
 
 For more details about EC2 nodes, refer to the official documentation for the https://aws.amazon.com/ec2[EC2 Management Console].
@@ -80,3 +80,19 @@ Use https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/configuring-instance-met
 === Add Tag
 
 Add metadata using https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/Using_Tags.html[tags] to categorize resources.
+
+=== IPv6 Address Count
+
+Specify how many IPv6 addresses to assign to the instance’s network interface.
+
+=== IPv6 Address Only
+
+Enable this option if the instance should use IPv6 exclusively. IPv6-only VPCs or subnets require this. When enabled, the instance will have IPv6 as its sole address, and the IPv6 Address Count must be greater than zero.
+
+=== HTTP Protocol IPv6
+
+Enable or disable IPv6 endpoints for the instance metadata service.
+
+=== Enable Primary IPv6
+
+Enable this option to designate the first assigned IPv6 address as the primary address. This ensures a consistent, non-changing IPv6 address for the instance. It does not control whether IPv6 addresses are assigned.
