--- a/versions/v2.13/modules/en/pages/cluster-deployment/infra-providers/digitalocean/machine-configuration.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/infra-providers/digitalocean/machine-configuration.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2025-12-10
 :page-revdate: {revdate}
 
 For more details about DigitalOcean, Droplets, refer to the https://docs.digitalocean.com/products/compute/[official documentation].
@@ -26,6 +26,8 @@ Enable the DigitalOcean agent for additional https://docs.digitalocean.com/produ
 == IPv6
 
 Enable IPv6 for Droplets.
+
+For more information, refer to the https://docs.digitalocean.com/products/networking/ipv6[Digital Ocean IPv6 documentation].
 
 == Private Networking
 
