--- a/versions/v2.13/modules/en/pages/cluster-deployment/node-requirements.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/node-requirements.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2025-12-10
 :page-revdate: {revdate}
 
 This page describes the requirements for the Rancher managed Kubernetes clusters where your apps and services will be installed. These downstream clusters should be separate from the three-node cluster running Rancher.
@@ -124,6 +124,19 @@ The ports required to be open are different depending on how the user cluster is
 For a breakdown of the port requirements for etcd nodes, controlplane nodes, and worker nodes in a Kubernetes cluster, refer to the https://rancher.com/docs/rke/latest/en/os/#ports[port requirements for the Rancher Kubernetes Engine.]
 
 Details on which ports are used in each situation are found under xref:installation-and-upgrade/requirements/port-requirements.adoc#_downstream_kubernetes_cluster_nodes[Downstream Cluster Port Requirements].
+
+=== IPv6 Address Requirements
+
+Rancher supports clusters configured with IPv4-only, IPv6-only, or dual-stack networking.
+
+You must provision each node with at least one valid IPv4 address, one IPv6 address, or both, according to the cluster networking configuration.
+
+For IPv6-only environments, ensure you correctly configure the operating system and that the `/etc/hosts` file includes a valid localhost entry, for example:
+
+[source,shell]
+----
+::1       localhost
+----
 
 [CAUTION]
 ====
