--- a/versions/v2.13/modules/en/pages/cluster-deployment/set-up-cloud-providers/amazon.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-deployment/set-up-cloud-providers/amazon.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2025-12-10
 :page-revdate: {revdate}
 :weight: 1
 
@@ -308,7 +308,7 @@ rancher_kubernetes_engine_config:
     useInstanceMetadataHostname: true
 ----
 +
-You must not enable `useInstanceMetadataHostname` when setting custom values for `hostname-override` for custom clusters. When you create a xref:cluster-deployment/custom-clusters/custom-clusters.adoc[custom cluster], add xref:cluster-deployment/custom-clusters/rancher-agent-options.adoc[`--node-name`] to the `docker run` node registration command to set `hostname-override` -- for example, `"$(hostname -f)"`. This can be done manually or by using *Show Advanced Options* in the Rancher UI to add *Node Name*.
+You must not enable `useInstanceMetadataHostname` when setting custom values for `hostname-override` for custom clusters. When you create a xref:cluster-deployment/custom-clusters/custom-clusters.adoc[custom cluster], add `--node-name` to the `docker run` node registration command to set `hostname-override` -- for example, `"$(hostname -f)"`. This can be done manually or by using *Show Advanced Options* in the Rancher UI to add *Node Name*.
 
 . Select the cloud provider.
 +
