--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2025-12-10
 :page-revdate: {revdate}
 :description: Read about port requirements needed in order for Rancher to operate properly, both for Rancher nodes and downstream Kubernetes cluster nodes
 
@@ -443,48 +443,48 @@ When using the xref:cluster-deployment/infra-providers/aws/aws.adoc[AWS EC2 node
 | SSH
 | TCP
 | 22
-| 0.0.0.0/0
+| 0.0.0.0/0 and ::/0
 | Inbound
 
 | HTTP
 | TCP
 | 80
-| 0.0.0.0/0
+| 0.0.0.0/0 and ::/0
 | Inbound
 
 | Custom TCP Rule
 | TCP
 | 443
-| 0.0.0.0/0
+| 0.0.0.0/0 and ::/0
 | Inbound
 
 | Custom TCP Rule
 | TCP
 | 2376
-| 0.0.0.0/0
-| Inbound
-
-| Custom TCP Rule
-| TCP
-| 2379-2380
-| sg-xxx (rancher-nodes)
-| Inbound
-
-| Custom UDP Rule
-| UDP
-| 4789
-| sg-xxx (rancher-nodes)
+| 0.0.0.0/0 and ::/0
 | Inbound
 
 | Custom TCP Rule
 | TCP
 | 6443
-| 0.0.0.0/0
+| 0.0.0.0/0 and ::/0
 | Inbound
 
-| Custom UDP Rule
-| UDP
-| 8472
+| Custom TCP Rule
+| TCP
+| 179
+| sg-xxx (rancher-nodes)
+| Inbound
+
+| Custom TCP Rule
+| TCP
+| 9345
+| sg-xxx (rancher-nodes)
+| Inbound
+
+| Custom TCP Rule
+| TCP
+| 2379-2380
 | sg-xxx (rancher-nodes)
 | Inbound
 
@@ -500,22 +500,34 @@ When using the xref:cluster-deployment/infra-providers/aws/aws.adoc[AWS EC2 node
 | sg-xxx (rancher-nodes)
 | Inbound
 
+| Custom UDP Rule
+| UDP
+| 4789
+| sg-xxx (rancher-nodes)
+| Inbound
+
+| Custom UDP Rule
+| UDP
+| 8472
+| sg-xxx (rancher-nodes)
+| Inbound
+
 | Custom TCP Rule
 | TCP
 | 30000-32767
-| 0.0.0.0/0
+| 0.0.0.0/0 and ::/0
 | Inbound
 
 | Custom UDP Rule
 | UDP
 | 30000-32767
-| 0.0.0.0/0
+| 0.0.0.0/0 and ::/0
 | Inbound
 
 | All traffic
 | All
 | All
-| 0.0.0.0/0
+| 0.0.0.0/0 and ::/0
 | Outbound
 |===
 
