--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/requirements/requirements.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/requirements/requirements.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-20
+:revdate: 2025-12-10
 :page-revdate: {revdate}
 :description: Learn the node requirements for each node running Rancher server when you’re configuring  Rancher to run either in a Docker or Kubernetes setup
 
@@ -26,9 +26,15 @@ Rancher needs to be installed on a supported Kubernetes version. Consult the htt
 
 Regardless of version and distribution, the Kubernetes cluster must have the aggregation API layer properly configured to support the xref:api/extension-apiserver.adoc[extension API] used by Rancher.
 
-=== Install Rancher on a Hardened Kubernetes cluster
+=== Install Rancher on a Hardened Kubernetes Cluster
 
 If you install Rancher on a hardened Kubernetes cluster, check the xref:security/psact.adoc#_exempting_required_rancher_namespaces[Exempting Required Rancher Namespaces] section for detailed requirements.
+
+=== Install Rancher on an IPv6-only or Dual-stack Kubernetes Cluster
+
+You can deploy Rancher on an IPv6-only or dual-stack Kubernetes cluster.
+
+For details on Rancher’s IPv6-only and dual-stack support, see the xref:reference-guides/dual-stack.adoc[IPv4/IPv6 Dual-stack] page.
 
 == Operating Systems and Container Runtime Requirements
 
